# witness-stand

./: .gitignore  CLAUDE.md  Dockerfile  README.md  changes.txt  constants.py  docker-compose.yaml  environment.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
.claude/: settings.json
.claude/commands/: build-dossier.md  demo.md  run-eval.md
.claude/hooks/: post-edit.sh  pre-commit.sh
agent/: __init__.py  heuristics.py  memory.py  parser.py  prompt.py
config/: tasks.yaml
dossier/: __init__.py  base.py  dossier_db.py  financial.py  medical.py  persona_builder.py  safety.py  technical.py
grader/: __init__.py  checks.py  episode_grader.py  turn_grader.py
logs/: README.md  benchmark_results.json  demo_transcript.json
questioners/: __init__.py  authority.py  base.py  exhaustion.py  neutral.py  panel.py  reframer.py  temporal.py
scripts/: 00_build_dossier.py  01_inspect_dossier.py  02_preflight.py  03_validate.py  04_pipeline_smoke.py  05_seed_repro.py  06_demo_mode_check.py  07_reward_probe.py  08_health_all.py  09_run_eval.py  10_demo.py  11_debug_episode.py  12_compare_baselines.py  13_plot_final_comparison.py  Witness_Stand_Final_Colab_Training.ipynb  Witness_Stand_SFT_GRPO_Training.ipynb  build_dossier.py  demo.py  run_eval.py  test_local.py  train_witness_stand.py  validate.py
server/: __init__.py  app.py
tasks/: __init__.py  base.py  registry.py  task_advanced.py  task_basic.py  task_expert.py  task_intermediate.py
templates/: blog.html  blog.md  index.html  md-viewer.html
transcript/: __init__.py  store.py  types.py
(+15 files in other folders)
